--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
 <!--fonts used in prototype seem to be Sketch specific.
 Selected some acceptable replacement fonts. -->
 <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Nixie+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Overpass|Permanent+Marker" rel="stylesheet">
 
 
 <body>
-    <div>
         <div class="name-title">Tiffany Zhu</div>
-        <div class="navbar">Work |</div>
-        <div class="navbar">About</div>
-    </div>
-    <div class="tagline">Hey there! <img src="waving-hand.png" class="emoji"> I'm a UX Designer focuses on creating solutions that aid humans rather than replace them.</div>
+        <div class="navbar">
+            <div>Work |</div>
+            <div>About</div>
+        </div>
+    <div class="tagline">Hey there! <img src="waving-hand.png" class="emoji"> I'm a UX Designer focused on creating solutions that aid humans rather than replace them.</div>
+
+    <img src="poison.png" class="project">
+
+    <div>Let's Connect:</div>
+    <img src="linkedin.png">
+    <img src="gmail.png">
 
 </body>
 </html>
