--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@ Selected some acceptable replacement fonts. -->
 
     <img src="poison.png" class="project">
 
-    <div>Let's Connect:</div>
-    <img src="linkedin.png">
-    <img src="gmail.png">
+    <div class="connect">
+        <div>Let's Connect:</div>
+        <img src="linkedin.png" id="icon1">
+        <img src="gmail.png" id="icon2">
+    </div>
 
 </body>
 </html>
