--- a/debugger/debugger.html
+++ b/debugger/debugger.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Know Yourself - Tiffany Zhu</title>
+    <title>Debugger - Tiffany Zhu</title>
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -12,12 +12,38 @@
 
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
+    <!--Bootstrap js-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> <!-- integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="../assets/main.js"></script>
+<!--scroll animation
+    <script type="text/javascript">
+        $(window).on("load", function() {
+            var offset = $("#sidebar").offset();
+            var scrollDelay = 0
+            $(window).scroll(function() {
+                if ($(window).scrollTop() > offset.top) {
+                    $("#sidebar").stop().animate({
+                        marginTop: $(window).scrollTop() - offset.top
+                    }, scrollDelay, "linear");
+                } else {
+                    $("#sidebar").stop().animate({
+                        marginTop: 0
+                    }, scrollDelay, "linear");
+                };
+            });
+        });
+    </script> -->
+
+
     <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
 
   </head>
-
-
-
 
 
   <body>
@@ -32,7 +58,7 @@
 
 
     <div id="page-wrap">
-        <div id="sidebar">
+        <div id="sidebar" class="sticky-top">
             <ul>
                 <li><a href="index.html">jQuery (animated)</a></li>
                 <li><a href="css.html">CSS (fixed)</a></li>
@@ -42,7 +68,22 @@
 
         <div id="content">
             <h2>
-                00 Context and Problem
+                00 My Role
+            </h2>
+
+                <p>
+                User interviews, usage reporting, user stories, sketches, UI design feedback (final design executed by K. Babula), project management, proposal creation.
+                </p>
+                <br>
+                <p>
+                A note on my involvement: In the past year, I had noticed a pattern of customers giving feedback that the Debugger was difficult to use. I found their use case to be compelling and approached one of our lead designers to explore this as a hack week project. The problem was ultimately large enough that we worked past hack week for four more weeks on this project.
+                </p>
+                <br>
+
+            <img src="../images/general/monitor.png" class="monitor">
+
+            <h2>
+                01 Context and Problem
             </h2>
 
             <p>
@@ -56,34 +97,29 @@
             <p>
                 We had gotten a lot of feedback in the past year that the Debugger experience had become increasingly poor. This made sense since it had not been fundamentally redesigned since 2014. This feedback reflected the shared sentiment that improving the Debugger would have a positive impact on our customers’ workflow and the value they derived from Segment. The Debugger, though a less "sexy" product feature, is foundational and a bad experience with it will inevitably result in broken workflows, frustrated users, an increase in tickets, and potentially mistrust in our product. This is an essential tool for diagnosing issues, building credibility with our users by giving them access to all data that flows through Segment.
             </p>
-
             <h2>
-                01 My Role
+                02 Solution
             </h2>
 
-                <p>
-                User interviews, usage reporting, user stories, sketches, UI design feedback (final design executed by K. Babula), project management, proposal creation.
-                </p>
-                <br>
-                <p>
-                A note on my involvement: In the past year, I had noticed a pattern of customers giving feedback that the Debugger was difficult to use. I found their use case to be compelling and approached one of our lead designers to explore this as a hack week project. The problem was ultimately large enough that we worked past hack week for four more weeks on this project.
-                </p>
+            <p>
+                Credit given to K. Babula who did the heavy lifting on UI realization. I worked closely with her to provide feedback and build design components. We pitched the below designs to our VP of Engineering and Head of Product.
+            </p>
+            <br>
+            <img src="../images/debugger/solution1.png" class="image">
 
-    </div>
+
+
+
         <div class="connect">
             <div>Let's Connect:</div>
             <img src="../images/general/linkedin.png" id="icon1">
             <img src="../images/general/gmail.png" id="icon2">
+
+        </div>
         </div>
 
     </div>
 
-<!--Bootstrap js-->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
   </body>
 
