--- a/knowyourself/knowyourself.html
+++ b/knowyourself/knowyourself.html
@@ -12,15 +12,25 @@
 
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
+    <!--Bootstrap js-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> <!-- integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="../assets/main.js"></script>
+
+
     <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
 
   </head>
 
 
+    <body>
 
-  <body>
-
-    <a href=""><div class="name-title">Tiffany Zhu</div></a>
+    <a href="../otherpages/index2.html"><div class="name-title">Tiffany Zhu</div></a>
         <div class="navbar">
             <a href="../otherpages/index2.html"><div style="padding: 0 35px">Work</div></a>
             <a href="../otherpages/about.html"><div>About</div></a>
@@ -29,7 +39,7 @@
     <img src="../images/knowyourself/knowyourselfhero.png" class="hero-image">
 
     <div id="page-wrap">
-        <div id="sidebar">
+        <div id="sidebar" class="sticky-top">
             <ul>
                 <li><a href="index.html">jQuery (animated)</a></li>
                 <li><a href="css.html">CSS (fixed)</a></li>
@@ -155,10 +165,6 @@
                         Blah blah blah
                     </p>
                 <br>
-    </div>
-
-
-    </div>
 
 <!--Bootstrap Carousel-->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -194,13 +200,15 @@
         <img src="../images/general/gmail.png" id="icon2">
     </div>
 
+    </div>
 
-<!--Bootstrap js-->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    </div>
+
+
+
+
 
   </body>
 </html>
