--- a/otherpages/about.html
+++ b/otherpages/about.html
@@ -29,7 +29,7 @@
 
   <body>
 
-<a href=""><div class="name-title">Tiffany Zhu</div></a>
+<a href=../otherpages/index2.html><div class="name-title">Tiffany Zhu</div></a>
         <div class="navbar">
             <a href="../otherpages/index2.html"><div style="padding: 0 35px">Work</div></a>
             <a href="../otherpages/about.html"><div>About</div></a>
