--- a/otherpages/index2.html
+++ b/otherpages/index2.html
@@ -3,31 +3,44 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Me - Tiffany</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Tiffany Zhu</title>
 
-    <script src="main.js"></script>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!--
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
 
 
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
+    <!--Bootstrap js
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+-->
+
+<!--<script type="text/javascript" src="../assets/main.js"></script>-->
+
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<script>
+    function initAOS() {
+      AOS.init({
+        duration: 1200,
+      });
+    }
+</script>
+
+<link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
 
   </head>
 
-
-
-  <body>
+<body onload="initAOS()">
 
 <a href=""><div class="name-title">Tiffany Zhu</div></a>
         <div class="navbar">
@@ -35,11 +48,14 @@
             <a href="../otherpages/about.html"><div>About</div></a>
         </div>
 
-    <div class="tagline">Hey there! <img src="../images/general/waving-hand.png" class="emoji"> I'm a UX Designer focused on creating solutions that aid humans rather than replace them.</div>
+    <div class="tagline" data-aos="fade-up">Hey there! <img src="../images/general/waving-hand.png" class="emoji"> I'm a UX Designer focused on creating solutions that aid humans rather than replace them.</div>
 
-    <a href="../knowyourself/knowyourself.html"><img src="../images/knowyourself/knowyourself.png" class="project"></a>
-    <a href="../debugger/debugger.html"><img src="../images/debugger/debugger-icon.png" class="project"></a>
 
+    <div data-aos="fade-up"><a href="../knowyourself/knowyourself.html"><img src="../images/knowyourself/knowyourself.png" class="project" class="item"></a></div>
+
+    <div data-aos="fade-up"><a href="../debugger/debugger.html"><img src="../images/debugger/debugger-icon.png" class="project" class="item"></a></div>
+
+    <div data-aos="fade-up"><a href="../knowyourself/knowyourself.html"><img src="../images/knowyourself/knowyourself.png" class="project" class="item"></a></div>
 
     <div class="connect">
         <div>Let's Connect:</div>
@@ -48,4 +64,7 @@
     </div>
 
   </body>
+
+
+
 </html>
