--- a/otherpages/about.html
+++ b/otherpages/about.html
@@ -3,25 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Me - Tiffany</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <script src="main.js"></script>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>About - Tiffany Zhu</title>
 
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
+<!--
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="../assets/main.js"></script> -->
+
+
+<link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
 
   </head>
 
@@ -30,100 +31,123 @@
   <body>
 
 <a href=../otherpages/index2.html><div class="name-title">Tiffany Zhu</div></a>
-        <div class="navbar">
-            <a href="../otherpages/index2.html"><div style="padding: 0 35px">Work</div></a>
-            <a href="../otherpages/about.html"><div>About</div></a>
+
+    <div class="navbar">
+        <div class="dropdown">
+        <button class="dropbtn">Work</button>
+            <div class="dropdown-content">
+              <a href="#">Project Know Yourself</a>
+              <a href="#">Debugger</a>
+              <a href="#">Chronicle</a>
+            </div>
         </div>
-
-    <h1>About Me</h1>
-
-    <div class="row">
-      <div class="col-sm-4">
-          <img src="../images/general/headshot.png" id="headshot">
-      </div>
-      <div class="col-sm-8">
-          <p>I’m a tech optimist. I believe in its power to break down barriers and create equality.</p>
-          <p href="#" class="link">Link to Resume</p>
-      </div>
+        <a href="../otherpages/about.html">
+            <div>About</div>
+        </a>
     </div>
 
-    <div class="row">
-      <div class="col-sm-4">
-          <h1>Experience</h1>
-      </div>
-      <div class="col-sm-8">
-          <p>Other careers considered in childhood: Journalism. Teaching. Sailor Moon.</p>
+  <h1>About Me</h1>
+  <br>
 
-          <p>I have a long career working with customers, understanding their goals, workflows, and pain-points with products, which makes me deeply empathetic and uniquely able to connect with users to solve their problems. I abstract the insights I gain and work with product managers and engineers to solve. There is nothing more important to building a product than actually getting in front of your users and hearing their feedback directly.</p>
+  <div class="row">
+    <div class="column-left">
+        <h1 class="header"><img src="../images/general/headshot.png" id="headshot"></h1>
+    </div>
+    <div class="column right">
+        <p>I’m a tech optimist. I believe in its power to break down barriers and create equality.</p>
+        <p href="#" class="link">Link to Resume</p>
+    </div>
+  </div>
 
-          <p>My deep-rooted interest in entrepreneurship and "building the plane while it's falling out of the sky" is what moved me from Google to two growth-phase start-ups, one being Segment, which I currently work at.</p>
+
+  <div class="row" >
+    <div class="column left">
+        <h1 class="header">Experience</h1>
+    </div>
+    <div class="column right">
+        <p>Other careers considered in childhood: Journalism. Teaching. Sailor Moon.</p>
+        <br>
+        <p>I have a long career working with customers, understanding their goals, workflows, and pain-points with products, which makes me deeply empathetic and uniquely able to connect with users to solve their problems. I abstract the insights I gain and work with product managers and engineers to solve. There is nothing more important to building a product than actually getting in front of your users and hearing their feedback directly.</p>
+        <br>
+        <p>My deep-rooted interest in entrepreneurship and "building the plane while it's falling out of the sky" is what moved me from Google to two growth-phase start-ups, one being Segment, which I currently work at.</p>
+  </div>
+  </div>
+
+  <div class="row">
+    <div class="column left">
+      <h1 class="header">Skills</h1>
+    </div>
+    <div class="column mini1">
+        <p>User Research:</p>
+        <br>
+        <ul>
+          <li>Semi-structured interviews</li>
+          <li>Card-sorting</li>
+          <li>Contextual inquiry</li>
+          <li>Think-aloud</li>
+          <li>Survey</li>
+        </ul>
+    </div>
+    <div class="column mini2">
+        <p>Product Strategy:</p>
+        <br>
+        <ul>
+          <li>Setting business goals</li>
+          <li>Requirement gathering</li>
+          <li>Market research</li>
+          <li>Competitive analysis</li>
+        </ul>
+    </div>
     </div>
 
-    <div class="row">
-      <div class="col-sm-4">
-          <h1>Skills</h1>>
-      </div>
-      <div class="col-sm-4">
-          <p>User Research:</p>
-          <ul>
-            <li>Semi-structured interviews</li>
-            <li>Card-sorting</li>
-            <li>Contextual inquiry</li>
-            <li>Think-aloud</li>
-            <li>Survey</li>
-          </ul>
-      </div>
-      <div class="col-sm-4">
-          <p>Product Strategy:</p>
-          <ul>
-            <li>Setting business goals</li>
-            <li>Requirement gathering</li>
-            <li>Market research</li>
-            <li>Competitive analysis</li>
-          </ul>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-sm-4">
-      </div>
-      <div class="col-sm-4">
-          <p>Interaction Design:</p>
-          <ul>
-            <li>Paper prototyping</li>
-            <li>Wireframing</li>
-            <li>High fidelity prototyping</li>
-          </ul>
-      </div>
-      <div class="col-sm-4">
-          <p>Other:</p>
-          <ul>
-            <li>Project management</li>
-            <li>Stakeholder buy-in</li>
-            <li>Challenger mentality sales</li>
-            <li>Client management</li>
-          </ul>
-      </div>
+  <div class="row">
+    <div class="column left">
+      <h1>  </h1>
     </div>
+    <div class="column mini1">
+        <p>Interaction Design:</p>
+        <br>
+        <ul>
+          <li>Paper prototyping</li>
+          <li>Wireframing</li>
+          <li>High fidelity prototyping</li>
+        </ul>
+    </div>
+    <div class="column mini2">
+        <p>Other:</p>
+        <br>
+        <ul>
+          <li>Project management</li>
+          <li>Stakeholder buy-in</li>
+          <li>Challenger mentality sales</li>
+          <li>Client management</li>
+        </ul>
+    </div>
+  </div>
 
-    <div class="row">
-      <div class="col-sm-4">
-          <h1>Tools</h1>>
-      </div>
-      <div class="col-sm-8">
-          <p>Sketch, Figma, Keynote, Adobe Illustrator and InDesign, InVision, Marvel, JIRA, HTML/CSS, Python</p>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-sm-4">
-          <h1>Contact</h1>>
-      </div>
-      <div class="col-sm-8">
-          <p>E-mail - tiffanyzhu729@gmail.com</p>
-          <p>LinkedIn - linkedin.com/in/tiffanyzhu</p>
-      </div>
+  <div class="row">
+    <div class="column left">
+        <h1 class="header">Tools</h1>
     </div>
+    <div class="column right">
+        <p>Sketch, Figma, Keynote, Adobe Illustrator and InDesign, InVision, Marvel, JIRA, HTML/CSS, Python</p>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="column left">
+        <h1 class="header">Contact</h1>
+    </div>
+    <div class="column right">
+        <p>E-mail - tiffanyzhu729@gmail.com</p>
+        <p>LinkedIn - linkedin.com/in/tiffanyzhu</p>
+    </div>
+  </div>
+
 
 
     <div class="connect">
