--- a/debugger/chronicle/chronicle.html
+++ b/debugger/chronicle/chronicle.html
@@ -32,18 +32,9 @@
 
     <a href="../otherpages/index2.html"><div class="name-title">Tiffany Zhu</div></a>
         <div class="navbar">
-        <div class="dropdown">
-        <button class="dropbtn">Work</button>
-            <div class="dropdown-content">
-              <a href="../knowyourself/knowyourself.html">Project Know Yourself</a>
-              <a href="../debugger/debugger.html">Debugger</a>
-              <a href="#">Chronicle</a>
-            </div>
+            <a href="../otherpages/index2.html"><div style="padding: 0 35px">Work</div></a>
+            <a href="../otherpages/about.html"><div>About</div></a>
         </div>
-        <a href="../otherpages/about.html">
-            <div>About</div>
-        </a>
-    </div>
 
     <img src="../images/knowyourself/knowyourselfhero.png" class="hero-image">
 
