--- a/debugger/debugger.html
+++ b/debugger/debugger.html
@@ -6,42 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Debugger - Tiffany Zhu</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
+<!--
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
-
-    <!--Bootstrap js-->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> <!-- integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"></script>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 
 <script type="text/javascript" src="../assets/main.js"></script>
-<!--scroll animation
-    <script type="text/javascript">
-        $(window).on("load", function() {
-            var offset = $("#sidebar").offset();
-            var scrollDelay = 0
-            $(window).scroll(function() {
-                if ($(window).scrollTop() > offset.top) {
-                    $("#sidebar").stop().animate({
-                        marginTop: $(window).scrollTop() - offset.top
-                    }, scrollDelay, "linear");
-                } else {
-                    $("#sidebar").stop().animate({
-                        marginTop: 0
-                    }, scrollDelay, "linear");
-                };
-            });
-        });
-    </script> -->
 
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-    <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
+<link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
 
   </head>
 
@@ -50,9 +34,18 @@
 
     <a href=""><div class="name-title">Tiffany Zhu</div></a>
         <div class="navbar">
-            <a href="../otherpages/index2.html"><div style="padding: 0 35px">Work</div></a>
-            <a href="../otherpages/about.html"><div>About</div></a>
+        <div class="dropdown">
+        <button class="dropbtn">Work</button>
+            <div class="dropdown-content">
+              <a href="../knowyourself/knowyourself.html">Project Know Yourself</a>
+              <a href="../debugger/debugger.html">Debugger</a>
+              <a href="#">Chronicle</a>
+            </div>
         </div>
+        <a href="../otherpages/about.html">
+            <div>About</div>
+        </a>
+    </div>
 
     <img src="../images/debugger/debugger-hero.png" class="hero-image">
 
@@ -60,14 +53,16 @@
     <div id="page-wrap">
         <div id="sidebar" class="sticky-top">
             <ul>
-                <li><a href="index.html">jQuery (animated)</a></li>
-                <li><a href="css.html">CSS (fixed)</a></li>
-                <li><a href="reveal.html">CSS (reveal)</a></li>
+                <li><a href="#my-role">00 My Role</a></li>
+                <li><a href="#context-problem">01 Context and Problem</a></li>
+                <li><a href="#solution">02 Solution</a></li>
+                <li><a href="#process">03 Process</a></li>
+                <li><a href="#learnings">04 Learnings</a></li>
             </ul>
         </div>
 
         <div id="content">
-            <h2>
+            <h2 id="my-role">
                 00 My Role
             </h2>
 
@@ -82,7 +77,7 @@
 
             <img src="../images/general/monitor.png" class="monitor">
 
-            <h2>
+            <h2 id="context-problem">
                 01 Context and Problem
             </h2>
 
@@ -97,7 +92,7 @@
             <p>
                 We had gotten a lot of feedback in the past year that the Debugger experience had become increasingly poor. This made sense since it had not been fundamentally redesigned since 2014. This feedback reflected the shared sentiment that improving the Debugger would have a positive impact on our customers’ workflow and the value they derived from Segment. The Debugger, though a less "sexy" product feature, is foundational and a bad experience with it will inevitably result in broken workflows, frustrated users, an increase in tickets, and potentially mistrust in our product. This is an essential tool for diagnosing issues, building credibility with our users by giving them access to all data that flows through Segment.
             </p>
-            <h2>
+            <h2 id="solution">
                 02 Solution
             </h2>
 
@@ -105,9 +100,169 @@
                 Credit given to K. Babula who did the heavy lifting on UI realization. I worked closely with her to provide feedback and build design components. We pitched the below designs to our VP of Engineering and Head of Product.
             </p>
             <br>
-            <img src="../images/debugger/solution1.png" class="image">
+
+      <div class="w3-content w3-display-container">
+        <img class="mySlides" src="../images/debugger/debugger-solution-1.png" style="width:100%">
+        <img class="mySlides" src="../images/debugger/debugger-solution-2.png" style="width:100%">
+
+        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+      </div>
+
+<!-- bootstrap carousel
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="../images/debugger/debugger-solution-1.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../images/debugger/debugger-solution-2.png" alt="Second slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+    </div> -->
+
+            <br>
+            <ol>
+              <li>Visually surface errors.</li>
+              <li>Visually represent downstream destinations for data.</li>
+              <li>More granularity in event volume data.</li>
+              <li>Adding a new Filter function.</li>
+              <li>Adding the capability to run boolean searches (stacking keyword criteria).</li>
+              <li>Zero state when no event is selected from the left.</li>
+            </ol>
+
+            <h4>Shipped Version</h4>
+            <img src="../images/general/monitor.png" class="monitor">
+
+            <h2 id="process">
+                03 Process
+            </h2>
+
+            <p>
+                We set up 10 feedback sessions with our technical support team and customers who previously had given some form of feedback on the Debugger. We asked them to discuss how they used the tool, what their goals were, and what were particular pain-points. We looked for the same information when reviewing old support tickets for anecdotal feedback.
+            </p>
+            <br>
+            <h3>3 Main Takeaways:</h3>
+            <p>
+               <ol>
+                  <li>Search functionality: more advanced event data search abilities;</li>
+                  <li>Information density: surface more relevant information in event rows and in event details;</li>
+                  <li>Better UI: an improved debugging experience with "jobs to be done" flows in mind.</li>
+               </ol>
+           </p>
+            <br>
+            <h3>Exploration, Inspiration, Iteration</h3>
+            <p>
+               We found inspiration in some unconventional places like JIRA and Gmail. Since there was no tool exactly like the Debugger out there, we instead focused on tools that solved for themes similar to our takeaways: tools that had heavy information density and allowed users to review a high volume of data in a short amount of time. Then we did some whiteboarding and ran through the crazy 8's exercise to generate ideas. You can see some brainstorming and initial sketches below.
+           </p>
+            <br>
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          </ol>
+
+          <div class="carousel-inner">
+
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="../images/debugger/debugger-process-1.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../images/debugger/debugger-process-2.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../images/debugger/debugger-process-3.png" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../images/debugger/debugger-process-4.png" alt="Fourth slide">
+            </div>
+
+          </div>
+
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+            <br>
+            <br>
+            <p>
+            This is a gallery of various design iterations. We fleshed out several different ideas to see which option (or combinations of options) best mapped the journey of data with the space we had.
+           </p>
+            <br>
 
 
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          </ol>
+
+          <div class="carousel-inner">
+
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="../images/debugger/debugger-iteration-1.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../images/debugger/debugger-iteration-2.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../images/debugger/debugger-iteration-3.png" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../images/debugger/debugger-iteration-4.png" alt="Fourth slide">
+            </div>
+
+          </div>
+
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+            <h2 id="learnings">
+                04 Learnings
+            </h2>
+
+            <p>
+                This was an incredible learning experience for me, as this was the first true project I got to work on for a real business case with a product designer. A few things I learned:
+            </p>
+            <h4>1. Creating themes of feedback and personas really is key to keeping your project focused on the goal.</h4>
+            <p>
+                It was easy to get caught up in the dozens, even hundreds of pieces of feedback, cluttering the design of the Debugger, but being reminded of the identified Jobs to Be Done allowed us to make smart decisions.
+            </p>
+            <h4>2. Setting metrics for success for a project largely based on sentiment and delighting the customer is quite nuanced.</h4>
+            <p>
+                We discussed multiple options from calculating visitor traffic before and after the redesign, to launching NPS scores within the app. We chose to do post-mortem follow-ups with both customers and internal users, as resources were too tight to implement a Satisfaction score.
+            </p>
 
 
         <div class="connect">
