--- a/otherpages/index2.html
+++ b/otherpages/index2.html
@@ -6,23 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tiffany Zhu</title>
 
-<!--
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
-
 
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
-    <!--Bootstrap js
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
--->
-
-<!--<script type="text/javascript" src="../assets/main.js"></script>-->
 
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -42,11 +28,25 @@
 
 <body onload="initAOS()">
 
-<a href=""><div class="name-title">Tiffany Zhu</div></a>
-        <div class="navbar">
-            <a href="../otherpages/index2.html"><div style="padding: 0 35px">Work</div></a>
-            <a href="../otherpages/about.html"><div>About</div></a>
+    <a href="">
+        <div class="name-title">Tiffany Zhu</div>
+    </a>
+    <div class="navbar">
+        <div class="dropdown">
+        <button class="dropbtn">Work</button>
+            <div class="dropdown-content">
+              <a href="../knowyourself/knowyourself.html">Project Know Yourself</a>
+              <a href="../debugger/debugger.html">Debugger</a>
+              <a href="#">Chronicle</a>
+            </div>
         </div>
+        <a href="../otherpages/about.html">
+            <div>About</div>
+        </a>
+    </div>
+
+
+
 
     <div class="tagline" data-aos="fade-up">Hey there! <img src="../images/general/waving-hand.png" class="emoji"> I'm a UX Designer focused on creating solutions that aid humans rather than replace them.</div>
 
