--- a/otherpages/about.html
+++ b/otherpages/about.html
@@ -8,19 +8,6 @@
 
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
-<!--
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-<script type="text/javascript" src="../assets/main.js"></script> -->
-
 
 <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
 
@@ -30,14 +17,13 @@
 
   <body>
 
-<a href=../otherpages/index2.html><div class="name-title">Tiffany Zhu</div></a>
-
-    <div class="navbar">
+      <a href="../otherpages/index2.html"><div class="name-title">Tiffany Zhu</div></a>
+        <div class="navbar">
         <div class="dropdown">
         <button class="dropbtn">Work</button>
             <div class="dropdown-content">
-              <a href="#">Project Know Yourself</a>
-              <a href="#">Debugger</a>
+              <a href="../knowyourself/knowyourself.html">Project Know Yourself</a>
+              <a href="../debugger/debugger.html">Debugger</a>
               <a href="#">Chronicle</a>
             </div>
         </div>
@@ -46,26 +32,29 @@
         </a>
     </div>
 
+
   <h1>About Me</h1>
   <br>
 
   <div class="row">
-    <div class="column-left">
+    <div class="column left">
         <h1 class="header"><img src="../images/general/headshot.png" id="headshot"></h1>
     </div>
     <div class="column right">
         <p>I’m a tech optimist. I believe in its power to break down barriers and create equality.</p>
+        <br>
+        <p>Other careers considered in childhood: Journalism. Teaching. Sailor Moon.</p>
+        <br>
         <p href="#" class="link">Link to Resume</p>
     </div>
   </div>
-
+<br>
 
   <div class="row" >
     <div class="column left">
         <h1 class="header">Experience</h1>
     </div>
     <div class="column right">
-        <p>Other careers considered in childhood: Journalism. Teaching. Sailor Moon.</p>
         <br>
         <p>I have a long career working with customers, understanding their goals, workflows, and pain-points with products, which makes me deeply empathetic and uniquely able to connect with users to solve their problems. I abstract the insights I gain and work with product managers and engineers to solve. There is nothing more important to building a product than actually getting in front of your users and hearing their feedback directly.</p>
         <br>
@@ -73,59 +62,26 @@
   </div>
   </div>
 
+  <br>
+  <br>
+
   <div class="row">
     <div class="column left">
       <h1 class="header">Skills</h1>
     </div>
-    <div class="column mini1">
-        <p>User Research:</p>
+    <div class="column right">
+        <p>User Research: semi-structured interviews, card-sorting, contextual inquiry, think-aloud, survey</p>
         <br>
-        <ul>
-          <li>Semi-structured interviews</li>
-          <li>Card-sorting</li>
-          <li>Contextual inquiry</li>
-          <li>Think-aloud</li>
-          <li>Survey</li>
-        </ul>
-    </div>
-    <div class="column mini2">
-        <p>Product Strategy:</p>
+        <p>Product Strategy: setting business goals, requirement gathering, market research, competitive analysis</p>
         <br>
-        <ul>
-          <li>Setting business goals</li>
-          <li>Requirement gathering</li>
-          <li>Market research</li>
-          <li>Competitive analysis</li>
-        </ul>
-    </div>
-    </div>
-
-
-  <div class="row">
-    <div class="column left">
-      <h1>  </h1>
-    </div>
-    <div class="column mini1">
-        <p>Interaction Design:</p>
+        <p>Interaction Design: paper prototyping, wireframing, high fidelity prototyping</p>
         <br>
-        <ul>
-          <li>Paper prototyping</li>
-          <li>Wireframing</li>
-          <li>High fidelity prototyping</li>
-        </ul>
-    </div>
-    <div class="column mini2">
-        <p>Other:</p>
-        <br>
-        <ul>
-          <li>Project management</li>
-          <li>Stakeholder buy-in</li>
-          <li>Challenger mentality sales</li>
-          <li>Client management</li>
-        </ul>
+        <p>Other: project management, stakeholder buy-in, challenger mentality sales, client management</p>
     </div>
   </div>
 
+  <br>
+  <br>
 
   <div class="row">
     <div class="column left">
@@ -137,6 +93,9 @@
   </div>
 </div>
 
+<br>
+<br>
+
 <div class="container">
   <div class="row">
     <div class="column left">
@@ -147,7 +106,10 @@
         <p>LinkedIn - linkedin.com/in/tiffanyzhu</p>
     </div>
   </div>
-
+  <br>
+  <br>
+  <br>
+  <br>
 
 
     <div class="connect">
