--- a/otherpages/index2.html
+++ b/otherpages/index2.html
@@ -55,12 +55,12 @@
 
     <div data-aos="fade-up"><a href="../debugger/debugger.html"><img src="../images/debugger/debugger-icon.png" class="project" class="item"></a></div>
 
-    <div data-aos="fade-up"><a href="../knowyourself/knowyourself.html"><img src="../images/knowyourself/knowyourself.png" class="project" class="item"></a></div>
+    <div data-aos="fade-up"><a href=""><img src="../images/general/chronicle.png" class="project" class="item"></a></div>
 
     <div class="connect">
         <div>Let's Connect:</div>
-        <img src="../images/general/linkedin.png" id="icon1">
-        <img src="../images/general/gmail.png" id="icon2">
+        <a href="https://www.linkedin.com/in/tiffanyzhu" target="_blank"><img src="../images/general/linkedin.png" id="icon1"></a>
+        <a href="<a href="mailto:tiffanyzhu729@gmail.com" target="_blank"><img src="../images/general/gmail.png" id="icon2"></a>
     </div>
 
   </body>
