--- a/debugger/debugger.html
+++ b/debugger/debugger.html
@@ -8,31 +8,18 @@
 
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
-<!--
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"></script>
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
-
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-
-<script type="text/javascript" src="../assets/main.js"></script>
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
 
-  </head>
+</head>
 
 
   <body>
 
-    <a href=""><div class="name-title">Tiffany Zhu</div></a>
+    <a href="../otherpages/index2.html"><div class="name-title">Tiffany Zhu</div></a>
         <div class="navbar">
         <div class="dropdown">
         <button class="dropbtn">Work</button>
@@ -48,7 +35,6 @@
     </div>
 
     <img src="../images/debugger/debugger-hero.png" class="hero-image">
-
 
     <div id="page-wrap">
         <div id="sidebar" class="sticky-top">
@@ -75,8 +61,6 @@
                 </p>
                 <br>
 
-            <img src="../images/general/monitor.png" class="monitor">
-
             <h2 id="context-problem">
                 01 Context and Problem
             </h2>
@@ -101,38 +85,28 @@
             </p>
             <br>
 
-      <div class="w3-content w3-display-container">
-        <img class="mySlides" src="../images/debugger/debugger-solution-1.png" style="width:100%">
-        <img class="mySlides" src="../images/debugger/debugger-solution-2.png" style="width:100%">
+<!-- Slideshow container -->
+<div class="slideshow-container">
+  <div class="mySlides1">
+    <img src="../images/debugger/debugger-solution-1.png" style="width:100%">
+  </div>
+
+  <div class="mySlides1">
+    <img src="../images/debugger/debugger-solution-2.png" style="width:100%">
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+
+<!--      <div class="w3-content w3-display-container">
+        <img class="mySlides" src="../images/debugger/debugger-solution-1.png">
+        <img class="mySlides" src="../images/debugger/debugger-solution-2.png">
 
         <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-      </div>
+      </div>-->
 
-<!-- bootstrap carousel
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="../images/debugger/debugger-solution-1.png" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="../images/debugger/debugger-solution-2.png" alt="Second slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-    </div> -->
 
             <br>
             <ol>
@@ -145,7 +119,9 @@
             </ol>
 
             <h4>Shipped Version</h4>
-            <img src="../images/general/monitor.png" class="monitor">
+            <div class="monitor">
+              <img src="../images/debugger/shipped.gif" class="imtip" />
+            </div>
 
             <h2 id="process">
                 03 Process
@@ -170,83 +146,56 @@
            </p>
             <br>
 
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-          </ol>
-
-          <div class="carousel-inner">
-
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="../images/debugger/debugger-process-1.png" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="../images/debugger/debugger-process-2.png" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="../images/debugger/debugger-process-3.png" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="../images/debugger/debugger-process-4.png" alt="Fourth slide">
-            </div>
-
-          </div>
-
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+      <!-- Slideshow container -->
+      <div class="slideshow-container">
+        <div class="mySlides2">
+          <img src="../images/debugger/debugger-process-1.png" style="width:100%">
         </div>
 
-            <br>
-            <br>
-            <p>
-            This is a gallery of various design iterations. We fleshed out several different ideas to see which option (or combinations of options) best mapped the journey of data with the space we had.
-           </p>
-            <br>
-
-
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-          </ol>
-
-          <div class="carousel-inner">
-
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="../images/debugger/debugger-iteration-1.png" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="../images/debugger/debugger-iteration-2.png" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="../images/debugger/debugger-iteration-3.png" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="../images/debugger/debugger-iteration-4.png" alt="Fourth slide">
-            </div>
-
-          </div>
-
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+        <div class="mySlides2">
+          <img src="../images/debugger/debugger-process-2.png" style="width:100%">
         </div>
+
+        <div class="mySlides2">
+          <img src="../images/debugger/debugger-process-3.png" style="width:100%">
+        </div>
+
+        <div class="mySlides2">
+          <img src="../images/debugger/debugger-process-4.png" style="width:100%">
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+      </div>
+
+        <br>
+        <br>
+        <p>
+        This is a gallery of various design iterations. We fleshed out several different ideas to see which option (or combinations of options) best mapped the journey of data with the space we had.
+       </p>
+        <br>
+
+      <!-- Slideshow container -->
+      <div class="slideshow-container">
+        <div class="mySlides3">
+          <img src="../images/debugger/debugger-iteration-1.png" style="width:100%">
+        </div>
+
+        <div class="mySlides3">
+          <img src="../images/debugger/debugger-iteration-2.png" style="width:100%">
+        </div>
+
+        <div class="mySlides3">
+          <img src="../images/debugger/debugger-iteration-3.png" style="width:100%">
+        </div>
+
+        <div class="mySlides3">
+          <img src="../images/debugger/debugger-iteration-4.png" style="width:100%">
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+      </div>
 
             <h2 id="learnings">
                 04 Learnings
@@ -263,17 +212,23 @@
             <p>
                 We discussed multiple options from calculating visitor traffic before and after the redesign, to launching NPS scores within the app. We chose to do post-mortem follow-ups with both customers and internal users, as resources were too tight to implement a Satisfaction score.
             </p>
+            <br>
+            <br>
+            <br>
+            <br>
 
+    <div class="connect">
+        <div>Let's Connect:</div>
+        <a href="https://www.linkedin.com/in/tiffanyzhu" target="_blank"><img src="../images/general/linkedin.png" id="icon1"></a>
+        <a href="<a href="mailto:tiffanyzhu729@gmail.com" target="_blank"><img src="../images/general/gmail.png" id="icon2"></a>
+    </div>
 
-        <div class="connect">
-            <div>Let's Connect:</div>
-            <img src="../images/general/linkedin.png" id="icon1">
-            <img src="../images/general/gmail.png" id="icon2">
-
-        </div>
         </div>
 
     </div>
+
+<script type="text/javascript" src="../assets/main.js"></script>
+
 
 
   </body>
