--- a/knowyourself/knowyourself.html
+++ b/knowyourself/knowyourself.html
@@ -6,24 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Know Yourself - Tiffany Zhu</title>
 
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
-    <!--Bootstrap js-->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> <!-- integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-<script type="text/javascript" src="../assets/main.js"></script>
-
-
-    <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
+<link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
 
   </head>
 
@@ -50,14 +39,16 @@
     <div id="page-wrap">
         <div id="sidebar" class="sticky-top">
             <ul>
-                <li><a href="index.html">jQuery (animated)</a></li>
-                <li><a href="css.html">CSS (fixed)</a></li>
-                <li><a href="reveal.html">CSS (reveal)</a></li>
+                <li><a href="#my-role">00 My Role</a></li>
+                <li><a href="#context-problem">01 Context and Problem</a></li>
+                <li><a href="#solution">02 Solution</a></li>
+                <li><a href="#process">03 Process</a></li>
+                <li><a href="#learnings">04 Learnings</a></li>
             </ul>
         </div>
 
         <div id="content">
-            <h2>
+            <h2 id="my-role">
                 00 My Role
             </h2>
 
@@ -65,7 +56,7 @@
                 User Researcher, UX Designer, UX Writer
                 </p>
 
-            <h2>
+            <h2 id="context-problem">
                 01 Context and Problem
             </h2>
 
@@ -77,7 +68,7 @@
                 There are a number of potential solutions on the market, ranging from AI powered chatbots to apps that connect you to real therapists. In these cases, they often fall into two extremes: they either lack personalization or require too much time investment and input from the user.
             </p>
             <br>
-            <h2>
+            <h2 id="solution">
                 02 Solution
             </h2>
 
@@ -86,13 +77,13 @@
             </p>
             <br>
             <p>
-                You can watch the prototype in action in the video below or play with it yourself here [link].
+                You can watch the prototype in action in the video below.
             </p>
+            <br>
+            <iframe src="https://player.vimeo.com/video/303399786" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-            <img src="../images/general/monitor.png" class="monitor">
-
-            <h2>
-                03 Approach
+            <h2 id="process">
+                03 Process
             </h2>
 
             <h3>
@@ -100,7 +91,7 @@
             </h3>
 
                 <p>
-                    blah blah blach
+                    Our group’s ideas game together very naturally from our interest in tackling issues related to emotional regulation, a topic very salient to people our age. We did an idea generation blitz, that involved brainstorming 30 ideas that ranged from a daily affirmation mirror to a pen that could remind you to breathe every time it sensed you not doing so. Ultimately, we landed on an app that could help teenagers and young adults learn how to start regulating emotions since they were at the start of their life.
                 </p>
 
             <h3>
@@ -125,7 +116,7 @@
                     During this session, we decided to strip our idea back to first principles: what the problem was we were tackling, who would benefit.
                 </p>
                 <br>
-
+                <img src="../images/knowyourself/brainstorm-2.jpg" class="image">
 
                 <p>
                     In the end, rather than try to retrofit the design to fit our target market, we felt passionate enough about the solution to try to find a market that would fit the original idea we had in mind. We decided to focus our attention on young professionals and to reframe Jamie as a life coach app, rather than an emotional regulation chatbot. Though this reframing is subtle, it helped us ensure Jamie could deliver feasible regulation strategy suggestions, rather than very context specific guidance that could be entirely wrong.
@@ -166,47 +157,19 @@
                         Research has shown there are some key features that all apps must include in order to encourage behavior change. A big one is the ability for users to control their own data. Though we wanted to create a design that required little user input upfront, we did not want to make a Black Mirror-type tool, where the user had little control over how their data was being collected, so we made sure to have an extensive user preferences section, where users could add, change, and remove triggers that they felt were inaccurate or intrusive.
                     </p>
 
-            <h3>
-                Learnings
-            </h3>
+            <h2 id="learnings">
+                04 Learnings
+            </h2>
                     <h4>1. Take user tests seriously, but don’t take lukewarm user tests as a sign that you need to completely change your idea.</h4>
-                    <p>
-                        Blah blah blah
-                    </p>
+                    <h4>2. While important to focus on cost and feasibility, sometimes its more important to remove those constraints during the ideation phase to encourage creativity. </h4>
                 <br>
 
-<!--Bootstrap Carousel-->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="../images/general/monitor.png" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="../images/general/monitor.png" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="../images/general/monitor.png" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
+
 
     <div class="connect">
         <div>Let's Connect:</div>
-        <img src="../images/general/linkedin.png" id="icon1">
-        <img src="../images/general/gmail.png" id="icon2">
+        <a href="https://www.linkedin.com/in/tiffanyzhu" target="_blank"><img src="../images/general/linkedin.png" id="icon1"></a>
+        <a href="<a href="mailto:tiffanyzhu729@gmail.com" target="_blank"><img src="../images/general/gmail.png" id="icon2"></a>
     </div>
 
     </div>
@@ -217,7 +180,7 @@
 
 
 
-
+<script type="text/javascript" src="../assets/main.js"></script>
 
   </body>
 </html>
