--- a/debugger/debugger.html
+++ b/debugger/debugger.html
@@ -82,22 +82,20 @@
 
             <p>
                 Credit given to K. Babula who did the heavy lifting on UI realization. I worked closely with her to provide feedback and build design components. We pitched the below designs to our VP of Engineering and Head of Product.
-            </p>
-            <br>
+                <br>
+                <br>
+                <img src="../images/debugger/debugger-solution-1.png" class="image">
+                <br>
+                <br>
+                <br>
+                <img src="../images/debugger/debugger-solution-2.png" class="image">
+                </p>
+                <br>
 
-<!-- Slideshow container -->
-<div class="slideshow-container">
-  <div class="mySlides1">
-    <img src="../images/debugger/debugger-solution-1.png" style="width:100%">
-  </div>
 
-  <div class="mySlides1">
-    <img src="../images/debugger/debugger-solution-2.png" style="width:100%">
-  </div>
 
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-</div>
+
+
 
 <!--      <div class="w3-content w3-display-container">
         <img class="mySlides" src="../images/debugger/debugger-solution-1.png">
@@ -119,9 +117,8 @@
             </ol>
 
             <h4>Shipped Version</h4>
-            <div class="monitor">
-              <img src="../images/debugger/shipped.gif" class="imtip" />
-            </div>
+              <p><img src="../images/debugger/shipped.gif" class="image"> </p>
+
 
             <h2 id="process">
                 03 Process
@@ -148,24 +145,24 @@
 
       <!-- Slideshow container -->
       <div class="slideshow-container">
-        <div class="mySlides2">
+        <div class="mySlides1">
           <img src="../images/debugger/debugger-process-1.png" style="width:100%">
         </div>
 
-        <div class="mySlides2">
+        <div class="mySlides1">
           <img src="../images/debugger/debugger-process-2.png" style="width:100%">
         </div>
 
-        <div class="mySlides2">
+        <div class="mySlides1">
           <img src="../images/debugger/debugger-process-3.png" style="width:100%">
         </div>
 
-        <div class="mySlides2">
+        <div class="mySlides1">
           <img src="../images/debugger/debugger-process-4.png" style="width:100%">
         </div>
 
-        <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
       </div>
 
         <br>
@@ -177,24 +174,24 @@
 
       <!-- Slideshow container -->
       <div class="slideshow-container">
-        <div class="mySlides3">
+        <div class="mySlides2">
           <img src="../images/debugger/debugger-iteration-1.png" style="width:100%">
         </div>
 
-        <div class="mySlides3">
+        <div class="mySlides2">
           <img src="../images/debugger/debugger-iteration-2.png" style="width:100%">
         </div>
 
-        <div class="mySlides3">
+        <div class="mySlides2">
           <img src="../images/debugger/debugger-iteration-3.png" style="width:100%">
         </div>
 
-        <div class="mySlides3">
+        <div class="mySlides2">
           <img src="../images/debugger/debugger-iteration-4.png" style="width:100%">
         </div>
 
-        <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+        <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
       </div>
 
             <h2 id="learnings">
