--- a/knowyourself/knowyourself.html
+++ b/knowyourself/knowyourself.html
@@ -80,7 +80,7 @@
                 You can watch the prototype in action in the video below.
             </p>
             <br>
-            <iframe src="https://player.vimeo.com/video/303399786" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <p><iframe src="https://player.vimeo.com/video/303399786" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
 
             <h2 id="process">
                 03 Process
@@ -116,8 +116,8 @@
                     During this session, we decided to strip our idea back to first principles: what the problem was we were tackling, who would benefit.
                 </p>
                 <br>
-                <img src="../images/knowyourself/brainstorm-2.jpg" class="image">
-
+                <p><img src="../images/knowyourself/brainstorm-2.jpg" class="image"></p>
+                <br>
                 <p>
                     In the end, rather than try to retrofit the design to fit our target market, we felt passionate enough about the solution to try to find a market that would fit the original idea we had in mind. We decided to focus our attention on young professionals and to reframe Jamie as a life coach app, rather than an emotional regulation chatbot. Though this reframing is subtle, it helped us ensure Jamie could deliver feasible regulation strategy suggestions, rather than very context specific guidance that could be entirely wrong.
                 </p>
@@ -129,8 +129,24 @@
                 <p>
                     With this new pivot in mind, we did another round of literature review, focused on emotional regulation strategies and how people generally cope with stress. The real breakthrough in research was when we learned that most use “approach” (focused on fixing a problem) or “avoidance” (focused on distracting yourself from a problem) strategies to deal with stressful situations. With this direction, we could create strategies/features that catered to both. This was the key piece of information that gave us a strong direction towards the final prototype.
                 </p>
+                <br>
+                <!-- Slideshow container -->
+                  <div class="slideshow-container">
+                    <div class="mySlides1">
+                      <img src="../images/knowyourself/knowyourself-final3.png" style="width:100%">
+                    </div>
 
+                    <div class="mySlides1">
+                      <img src="../images/knowyourself/knowyourself-final1.png" style="width:100%">
+                    </div>
 
+                    <div class="mySlides1">
+                      <img src="../images/knowyourself/knowyourself-final2.png" style="width:100%">
+                    </div>
+
+                    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+                    </div>
                 <br>
 
             <h3>
@@ -171,7 +187,9 @@
         <a href="https://www.linkedin.com/in/tiffanyzhu" target="_blank"><img src="../images/general/linkedin.png" id="icon1"></a>
         <a href="<a href="mailto:tiffanyzhu729@gmail.com" target="_blank"><img src="../images/general/gmail.png" id="icon2"></a>
     </div>
-
+    <br>
+    <br>
+    <br>
     </div>
 
 
