--- a/otherpages/about.html
+++ b/otherpages/about.html
@@ -8,14 +8,17 @@
 
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-<link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-  </head>
+    <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
+
+</head>
 
 
 
-  <body>
+  <body onload="initAOS()">
 
       <a href="../otherpages/index2.html"><div class="name-title">Tiffany Zhu</div></a>
         <div class="navbar">
@@ -37,24 +40,24 @@
   <br>
 
   <div class="row">
-    <div class="column left">
+    <div class="column left" data-aos="fade-right">
         <h1 class="header"><img src="../images/general/headshot.png" id="headshot"></h1>
     </div>
-    <div class="column right">
+    <div class="column right" data-aos="fade-left">
         <p>I’m a tech optimist. I believe in its power to break down barriers and create equality.</p>
         <br>
         <p>Other careers considered in childhood: Journalism. Teaching. Sailor Moon.</p>
         <br>
-        <p href="#" class="link">Link to Resume</p>
+        <p><a class="link" href="https://drive.google.com/file/d/14m7iC9-4iOdZJTEB2MgdCKEpH44nGPR8/view?usp=sharing" target="_blank">Resume Here</a></p>
     </div>
   </div>
 <br>
 
   <div class="row" >
-    <div class="column left">
+    <div class="column left" data-aos="fade-right">
         <h1 class="header">Experience</h1>
     </div>
-    <div class="column right">
+    <div class="column right" data-aos="fade-left">
         <br>
         <p>I have a long career working with customers, understanding their goals, workflows, and pain-points with products, which makes me deeply empathetic and uniquely able to connect with users to solve their problems. I abstract the insights I gain and work with product managers and engineers to solve. There is nothing more important to building a product than actually getting in front of your users and hearing their feedback directly.</p>
         <br>
@@ -66,10 +69,10 @@
   <br>
 
   <div class="row">
-    <div class="column left">
+    <div class="column left" data-aos="fade-right">
       <h1 class="header">Skills</h1>
     </div>
-    <div class="column right">
+    <div class="column right" data-aos="fade-left">
         <p>User Research: semi-structured interviews, card-sorting, contextual inquiry, think-aloud, survey</p>
         <br>
         <p>Product Strategy: setting business goals, requirement gathering, market research, competitive analysis</p>
@@ -84,10 +87,10 @@
   <br>
 
   <div class="row">
-    <div class="column left">
+    <div class="column left" data-aos="fade-right">
         <h1 class="header">Tools</h1>
     </div>
-    <div class="column right">
+    <div class="column right" data-aos="fade-left">
         <p>Sketch, Figma, Keynote, Adobe Illustrator and InDesign, InVision, Marvel, JIRA, HTML/CSS, Python</p>
     </div>
   </div>
@@ -98,10 +101,10 @@
 
 <div class="container">
   <div class="row">
-    <div class="column left">
+    <div class="column left" data-aos="fade-right">
         <h1 class="header">Contact</h1>
     </div>
-    <div class="column right">
+    <div class="column right" data-aos="fade-left">
         <p>E-mail - tiffanyzhu729@gmail.com</p>
         <p>LinkedIn - linkedin.com/in/tiffanyzhu</p>
     </div>
@@ -119,4 +122,8 @@
     </div>
 
   </body>
+
+    <script type="text/javascript" src="../assets/main.js"></script>
+
+
 </html>
