--- a/otherpages/index2.html
+++ b/otherpages/index2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,22 +9,13 @@
 
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
 
-<script>
-    function initAOS() {
-      AOS.init({
-        duration: 1200,
-      });
-    }
-</script>
-
-<link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
-
-  </head>
+</head>
 
 <body onload="initAOS()">
 
@@ -66,5 +57,6 @@
   </body>
 
 
+<script type="text/javascript" src="../assets/main.js"></script>
 
 </html>
