--- a/knowyourself/knowyourself.html
+++ b/knowyourself/knowyourself.html
@@ -8,12 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-<link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
-
+    <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
   </head>
 
 
@@ -80,7 +75,7 @@
                 You can watch the prototype in action in the video below.
             </p>
             <br>
-            <p><iframe src="https://player.vimeo.com/video/303399786" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
+            <p><iframe src="https://player.vimeo.com/video/303399786" width="640" height="360" frameborder="0" allowfullscreen></iframe></p>
 
             <h2 id="process">
                 03 Process
@@ -192,13 +187,10 @@
     <br>
     </div>
 
-
-
     </div>
 
-
-
-<script type="text/javascript" src="../assets/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../assets/main.js"></script>
 
   </body>
 </html>
